[update]Support compatible streaming and play source
Add a VideoPlaySourceInfo DTO and a /source/{videoId} API to return play URL, source/process mode and fallback info. Refactor VideoStreamController to extract streamLocalFile for Range-aware local file streaming and add a compatible MP4 endpoint (/compatible/{videoId}.mp4). Implement compatibility planning and output preparation in VideoPlayService: probe media with ffprobe, decide remux/transcode/HLS or MP4 outputs, generate compatible MP4 or HLS via ffmpeg, add command execution helpers, and use per-video locks for safe generation. Also small collection/query null-safety improvements. Replace sun.misc Base64 usage with java.util.Base64 in RSAUtil and add ffprobe-path configuration to application.yml.